--- a/.eslintrc
+++ b/.eslintrc
@@ -1,24 +1,51 @@
-{
-  "parser"  : "babel-eslint",
-  "extends" : "airbnb",
-  "env"     : {
-    "browser" : true
-  },
-  "globals" : {
-    "__DEV__"      : false,
-    "__PROD__"     : false,
-    "__DEBUG__"    : false,
-    "__DEBUG_NW__" : false
-  },
-  "rules": {
-    "comma-dangle" : [1, "never"],
-    "func-names"   : 0,
-    "key-spacing"  : 0,
-    "space-before-function-paren" : [2, "always"],
-    "no-else-return"   : 0,
-    "no-multi-spaces"  : 0,
-    "quotes"           : [2, "single"],
-    "jsx-quotes"       : [2, "prefer-single"],
-    "one-var"          : 0
-  }
-}
+---
+parser: babel-eslint
+
+extends: eslint-config-airbnb
+
+plugins:
+  - react
+
+globals:
+  __DEBUG__: true
+  __DEBUG_SERVER_ERRORS__: true
+  __SERVER_ERRORS__: true
+
+env:
+  browser: true
+  node: true
+  mocha: true
+
+rules:
+  ### Variables
+  no-undef: 2
+  no-unused-vars: [2, { vars: all, args: none }]
+
+  ### Stylistic issues
+  comma-dangle: [2, "never"]
+  brace-style: [2, "stroustrup", { "allowSingleLine": true }]
+  indent: [1, 2, { SwitchCase: 1, VariableDeclarator: 2 }]
+  id-length: [1, { min: 2, exceptions: [_, e, i, k, v] }]
+
+  ### React
+  jsx-quotes: [1, prefer-single]
+  react/display-name: 0
+  react/jsx-boolean-value: [1, always]
+  react/jsx-curly-spacing: [1, never]
+  react/jsx-no-duplicate-props: [2, { ignoreCase: true }]
+  react/jsx-no-undef: 2
+  react/jsx-sort-prop-types: 0
+  react/jsx-sort-props: 0
+  react/jsx-uses-react: 2
+  react/jsx-uses-vars: 2
+  react/no-danger: 0
+  react/no-did-mount-set-state: 1
+  react/no-did-update-set-state: 0
+  react/no-multi-comp: 2
+  react/no-unknown-property: 2
+  react/prop-types: 1
+  react/react-in-jsx-scope: 2
+  react/require-extension: [1, { extensions: [.js, .jsx] }]
+  react/self-closing-comp: 2
+  react/sort-comp: 0                                                            # Should be 1. `statics` should be on top.
+  react/wrap-multilines: 2
