--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-redux-starter-kit",
+  "name": "atta-control-center",
   "version": "0.18.0",
-  "description": "Get started with React, Redux, and React-Router!",
+  "description": "Main hub for all things Attamusc twitch",
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf dist",
@@ -18,9 +18,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/davezuko/react-redux-starter-kit.git"
+    "url": "git+https://github.com/attamusc/atta-control-center.git"
   },
-  "author": "David Zukowski <david@zuko.me> (http://zuko.me)",
+  "author": "Sean Dunn <sean@attamusc.com>",
   "license": "MIT",
   "dependencies": {
     "cssnano": "^3.3.2",
