--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "isomorphic-fetch": "^2.2.0",
     "moment": "^2.10.6",
     "react": "^0.14.0",
+    "react-addons-css-transition-group": "^0.14.3",
     "react-dom": "^0.14.0",
     "react-redux": "^4.0.0",
     "react-router": "1.0.1",
+    "react-typist": "^0.3.0",
     "redux": "^3.0.0",
     "redux-simple-router": "^1.0.0",
     "redux-thunk": "^1.0.0",
